kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamify-ingress
  namespace: streamify
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:  # Add the dash here
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5001
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
